fix footer's z-index to be behind selectpickers' options

--- a/health4u/static/health4u.css
+++ b/health4u/static/health4u.css
@@ -53,7 +53,6 @@ body::after {
 .back-to-top {
     display: none;
     cursor: pointer;
-    z-index: 10000;
     position: fixed;
     padding: 12px 16px;
     bottom: 20px;
@@ -63,6 +62,10 @@ body::after {
 
 .back-to-top:hover {
     background-color: var(--main-theme-color);
+}
+
+.low-z-index {
+    z-index: -100;
 }
 
 
